# Glance-fashion

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: approaches.md  build_pdf.py  design.md
evaluation/: hard_negatives.py  metrics.py  run_eval.py
fashionlib/: __init__.py  colors.py  config.py  data.py  models.py  regions.py  scene.py  schema.py  store.py  viz.py
indexer/: build_index.py
outputs/: eval_summary.json  hard_negatives.json
retriever/: bind.py  parse.py  query.py  search.py
tests/: test_bind.py  test_colors.py  test_metrics.py  test_parse.py
